--- a/templates/users/favorites.html
+++ b/templates/users/favorites.html
@@ -162,7 +162,7 @@
                                 </td>
                                 <td class="Product-info">
                                     {% if post.post.slug %}
-                                    <h6 class="name"><a href="{% url 'post_detail_slug' post.post.slug %}">{{ post.post }}</a></h6>
+                                    <h6 class="name"><a href="{% url 'post_detail_slug' post.post.slug %}">{{ post.post }} {{ post.post.id }}</a></h6>
                                     {% else %}
                                     <h6 class="name"><a href="{% url 'post_detail' post.id %}">{{ post.post }}</a></h6>
                                     {% endif %}
@@ -178,9 +178,12 @@
                                         <p>Категория <span>{{ post.post.category }}</span></p>
                                     </div>
                                 </td>
-                                <td class="Product-action">
-                                    <button class="remove"><i class="icon-trash-2"></i></button>
-                                </td>
+                                <form method="POST">
+                                    {% csrf_token %}
+                                    <td class="Product-action">
+                                        <button class="remove" name = "delete"><i class="icon-trash-2"></i></button>
+                                    </td>
+                                </form>
                             </tr>
                             {% endfor %}
                         </tbody>
