--- a/templates/posts/create.html
+++ b/templates/posts/create.html
@@ -203,14 +203,17 @@
                                    <select size="1" name="category" class="form-control primary-menu">
                                     <option class="form-control menu-item-has-children" value="asdaw">
                                         Категория
+                                        <select name="" id="">
+                                            <option value="">cub cat</option>
+                                        </select>
                                     </option>
                                     <ul class="sub-menu">
                                         {% for category in categories %}
                                         {% if category.parent == None %}
-                                        <li class="menu-item-has-children"><input type="submit" placeholder="" >{{ category.title }}
+                                        <li class="menu-item-has-children"><input type="checkbox" placeholder=" " >{{ category.title }}
                                             {% if category.parent > 1  %}
                                             <ul style="right: 100% !important;" class="sub-menu" >
-                                                <li ><input type="submit">Blog Grid Left Sidebar</li>
+                                                <li ><input type="checkbox">Blog Grid Left Sidebar</li>
                                             </ul>
                                             {% endif %}
                                         </li>
