--- a/templates/users/comments.html
+++ b/templates/users/comments.html
@@ -126,7 +126,7 @@
         <div class="container">
             <!-- Pager Banner Start -->
             <div class="page-banner-content text-center">
-                <h2 class="page-banner-title">Пользователь {{ user.username }}</h2>
+                <h2 class="page-banner-title">Отзывы пользователя {{ user.username }}</h2>
                 <ul class="breadcrumb justify-content-center">
                     <li class="breadcrumb-item"><a href="index.html">Домой</a></li>
                     <li class="breadcrumb-item"><a href="shop-grid-left-sidebar.html">Товар</a></li>
@@ -160,8 +160,12 @@
                                 <!-- Single Comment Start  -->
                                 <div class="single-comment">
                                     <!-- <div class="comment-author"> -->
+                                    {% if comment.user.profile_image %}
                                         <img src="{{ comment.user.profile_image.url }}" style = "border-radius: 30px;" width="10%" alt="">
                                     <!-- </div> -->
+                                    {% else %}
+                                        <img src="https://thumbs.dreamstime.com/b/no-image-available-icon-flat-vector-no-image-available-icon-flat-vector-illustration-132482953.jpg" style = "border-radius: 30px;" width="10%" alt="">
+                                    {% endif %}
                                     <div class="comment-content">
                                         <div class="author-name-rating">
                                             <h6 class="name">{{ comment.user }}</h6>
@@ -178,13 +182,14 @@
                                 {% endfor %}
                             </div>
                             <div class="review-form">
-                                <h2 class="form-title">Add a review </h2>
+                                <h2 class="form-title">Оставить отзыв </h2>
 
-                                <form action="shop-single.html#">
+                                <form method="POST">
+                                    {% csrf_token %}
                                     <div class="review-rating">
-                                        <h5 class="title">Review:</h5>
+                                        <h5 class="title">Отзыв:</h5>
 
-                                        <ul id='stars'>
+                                        <ul id='stars' name = "rating">
                                             <li class='star' title='Poor' data-bs-value='1'>
                                                 <i class='icon-star'></i>
                                             </li>
@@ -203,31 +208,18 @@
                                         </ul>
                                     </div>
                                     <div class="row">
-                                        <div class="col-md-6">
+                                        <div class="col-lg-12">
                                             <div class="single-form">
-                                                <input type="text" class="form-control" placeholder="Name">
-                                            </div>
-                                        </div>
-                                        <div class="col-md-6">
-                                            <div class="single-form">
-                                                <input type="email" class="form-control" placeholder="Email">
+                                                <textarea class="form-control" name = "text" placeholder="Comment"></textarea>
                                             </div>
                                         </div>
                                         <div class="col-lg-12">
                                             <div class="single-form">
-                                                <textarea class="form-control" placeholder="Comment"></textarea>
-                                            </div>
-                                        </div>
-                                        <div class="col-lg-12">
-                                            <div class="single-form">
-                                                <button class="btn btn-primary btn-hover-dark">Post Comment</button>
+                                                <button class="btn btn-primary btn-hover-dark">Оставить отзыв</button>
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="form-check">
-                                        <input class="form-check-input" type="checkbox" value="" id="reviewCheck">
-                                        <label class="form-check-label" for="reviewCheck">NOTIFY ME OF NEW POSTS BY EMAIL.</label>
-                                    </div>
+                                    
                                 </form>
                             </div>
                         </div>
