--- a/templates/users/profile.html
+++ b/templates/users/profile.html
@@ -126,7 +126,11 @@
         <div class="container">
             <!-- Pager Banner Start -->
             <div class="page-banner-content text-center">
+                {% if user == request.user %}
                 <h2 class="page-banner-title">Мой аккаунт</h2>
+                {% else %}
+                <h2 class="page-banner-title">{{ user.username }}</h2>
+                {% endif %}
                 <ul class="breadcrumb justify-content-center">
                     <li class="breadcrumb-item"><a href="index.html">Домой</a></li>
                     <li class="breadcrumb-item active">Мой аккаунт</li>
@@ -152,9 +156,15 @@
                             <li>
                                 <a href="{% url 'user_favorites' user.id %}"><i class="icon-heart "></i> Избранное</a>
                             </li>
+                            {% if user != request.user %}
                             <li>
-                                <a href="{% url 'user_favorites' user.id %}"><i class="icon-star "></i> Оставить комментарий</a>
+                                <a href="{% url 'comment_user' user.id %}"><i class="icon-star "></i> Оставить отзыв</a>
                             </li>
+                            {% else %}
+                            <li>
+                                <a href="{% url 'comment_user' user.id %}"><i class="icon-star "></i> Посмотреть отзывы</a>
+                            </li>
+                            {% endif %}
                             <li>
                                 <a href="{% url 'profile_update' user.id %}"><i class="fa fa-user"></i> Редактировать профиль</a>
                             </li>
